update all api calls

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ VITE_API_BASE_URL=https://projxchange-backend-v1.vercel.app
 
 # For local development, we can use:
 # VITE_API_BASE_URL=http://localhost:3000
+
+#Cloudinary Configuration
+VITE_CLOUDINARY_CLOUD_NAME=dmfh4f4yg
+VITE_CLOUDINARY_UPLOAD_PRESET=projectXchange
+
