field_ownership related code added

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,11 @@ VITE_API_BASE_URL=https://projxchange-backend-v1.vercel.app
 # For local development, we can use:
 # VITE_API_BASE_URL=http://localhost:3000
 
-#Cloudinary Configuration
+# Upstash Redis Configuration
+UPSTASH_REDIS_REST_URL=your_upstash_redis_url_here
+UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_token_here
+
+# Cloudinary Configuration
 VITE_CLOUDINARY_CLOUD_NAME=dmfh4f4yg
 VITE_CLOUDINARY_UPLOAD_PRESET=projectXchange
 
