update referral system

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_token_here
 VITE_CLOUDINARY_CLOUD_NAME=dmfh4f4yg
 VITE_CLOUDINARY_UPLOAD_PRESET=projectXchange
 
+# Feature Flags - Referral-Only Access Mode
+VITE_REFERRAL_ONLY_MODE=true
+VITE_ENABLE_PAYMENTS=false
+VITE_ENABLE_MONTHLY_DRIP=true
+
+# Credit System Configuration
+VITE_MAX_TOTAL_CREDITS=9
+VITE_MAX_REFERRAL_CREDITS=6
+VITE_MAX_MONTHLY_CREDITS=3
